--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "morgan": "~1.9.1",
     "nodemon": "^2.0.4",
     "pg": "^8.2.1",
+    "react-redux": "^7.2.0",
     "sequelize": "^5.21.13"
   }
 }
