--- a/package.json
+++ b/package.json
@@ -1,22 +1,28 @@
 {
   "name": "code-kitchen",
   "version": "0.0.0",
-  "private": true,
+  "main": "index.js",
   "scripts": {
     "start": "node ./bin/www",
     "dev": "nodemon ./bin/www",
+    "postinstall": "cd client && npm install && npm run build",
     "db:reset": "sequelize db:drop && sequelize db:create && sequelize db:migrate && sequelize db:seed:all"
   },
   "dependencies": {
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
-    "express": "~4.16.1",
     "http-errors": "~1.6.3",
     "jade": "~1.11.0",
-    "morgan": "~1.9.1",
-    "nodemon": "^2.0.4",
-    "pg": "^8.2.1",
     "react-redux": "^7.2.0",
-    "sequelize": "^5.21.13"
+    "dotenv": "^8.2.0",
+    "express": "^4.17.1",
+    "express-session": "^1.17.1",
+    "morgan": "^1.10.0",
+    "mysql2": "^2.1.0",
+    "nodemon": "^2.0.4",
+    "pg": "^8.2.2",
+    "save": "^2.4.0",
+    "sequelize": "^6.3.0",
+    "sequelize-cli": "^6.2.0"
   }
 }
