--- a/.sequelizerc
+++ b/.sequelizerc
@@ -1,3 +1,3 @@
 const path = require('path');
 
-module.exports = { "config": path.resolve('./config', 'config.js') }
+module.exports = { "config": path.resolve('./config', 'config.json') }
