--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "start": "node ./bin/www",
     "dev": "nodemon ./bin/www",
     "postinstall": "cd client && npm install && npm run build",
-    "build": "sequelize db:migrate --env production && <other stuff to do before run the app>",
+    "build": "sequelize db:migrate --env production",
     "db:reset": "sequelize db:drop && sequelize db:create && sequelize db:migrate && sequelize db:seed:all"
   },
   "dependencies": {
